--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialMediaApplicaition"
         tools:targetApi="31" >
-        <activity
-            android:name=".Animation_screen"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
